--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^6.7.1
   build_runner: ^2.4.6
+  mockito: ^5.0.0
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
