--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   json_annotation: ^4.8.1
   dio: ^5.2.1+1
+  shared_preferences: ^2.2.0
+
 
 
 
@@ -47,6 +49,12 @@ dev_dependencies:
   json_serializable: ^6.7.1
   build_runner: ^2.4.6
   mockito: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/ic_luncher.png"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
