--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   json_annotation: ^4.8.1
   dio: ^5.2.1+1
   shared_preferences: ^2.2.0
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 
 
@@ -69,6 +72,7 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
